# ceilometer-toolbox

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  pages.yaml
docs/src/: ceilometer_toolbox.md  conf.py  index.md
example_configs/: STRATFINDER_metadata.toml  raw2l1_cl61.conf  stratfinder_settings_cl61.json  values_qc.toml
src/ceilometer_toolbox/: __init__.py  colors.py  data.py  device.py  utils.py
testing/: utils.py
testing/input/: live_20260325_235741.nc  live_20260326_001241.nc  live_20260326_002741.nc
tests/: ceilometer_data_test.py  ceilometer_device_test.py  ceilometer_plots_test.py  ceilometer_utils_test.py
